<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_add_task"
        android:icon="@drawable/ic_action_add"
        android:title="@string/menu_add_task"
        android:titleCondensed="@string/menu_add_task_condensed"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_show_completed"
        android:checkable="true"
        app:showAsAction="never"
        android:title="@string/menu_show_completed"
        android:titleCondensed="@string/menu_show_completed_condensed"/>
    <item
        android:id="@+id/menu_sync_now"
        app:showAsAction="never"
        android:title="@string/menu_sync_now"
        android:titleCondensed="@string/menu_sync_now_condensed"/>

</menu>