<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/visible_task_list_fragment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp" >

    <LinearLayout
        android:id="@+id/name_setting"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp" >

        <TextView
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_list_name_caption" />

        <TextView
            android:id="@+id/list_name"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/color_setting"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="4dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="horizontal"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp" >

        <TextView
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/task_list_color_caption" />

        <View
            android:id="@+id/list_color"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:background="#00ffffff" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:gravity="center_vertical" >

        <TextView
            android:id="@android:id/button2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minWidth="64dp"
            android:text="@string/activity_manage_list_btn_delete"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/holo_red_light" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@android:id/button3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minWidth="0dp"
            android:text="@string/activity_manage_list_btn_save"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="?attr/colorAccent" />
    </LinearLayout>

</LinearLayout>